--- a/roles/server/templates/base-config.xml
+++ b/roles/server/templates/base-config.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<cruise xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="cruise-config.xsd" schemaVersion="72">
+<cruise xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="cruise-config.xsd" schemaVersion="{{ GOCD_CONFIG_SCHEMA_VERSION }}">
    <server artifactsdir="artifacts" 
       {% if GOCD_SITE_URL is defined %}
       siteUrl="{{ GOCD_SITE_URL }}" 
